2020-10-16 1. 修复在部分Linux平台上X11窗管里无法移动到屏幕外问题。

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,13 +10,17 @@ SET(CMAKE_AUTORCC ON)
 #SET(Qt5WebEngineWidgets_DIR "${CMAKE_PREFIX_PATH}/cmake/Qt5WebEngineWidgets")
 #FIND_PACKAGE失败则需要设置CMAKE_PREFIX_PATH，或者设置上述路径
 IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
-    SET(CMAKE_PREFIX_PATH "/usr/lib/x86_64-linux-gnu/cmake")
+#    SET(CMAKE_PREFIX_PATH "/usr/lib/x86_64-linux-gnu/cmake")
 ENDIF()
 
 FIND_PACKAGE(Qt5 COMPONENTS Core REQUIRED)
 FIND_PACKAGE(Qt5 COMPONENTS Gui REQUIRED)
 FIND_PACKAGE(Qt5 COMPONENTS Widgets REQUIRED)
 FIND_PACKAGE(Qt5 COMPONENTS Network REQUIRED)
+IF (CMAKE_HOST_SYSTEM_NAME MATCHES "Linux")
+    FIND_PACKAGE(Qt5 COMPONENTS X11Extras REQUIRED)
+    FIND_PACKAGE(X11 REQUIRED)
+ENDIF()
 
 #Application单例库
 SET(QAPPLICATION_CLASS QApplication CACHE STRING "Inheritance class for SingleApplication")
@@ -30,8 +34,8 @@ FILE(GLOB_RECURSE SRC_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.h)
 SET(QRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/resource/res.qrc)
 
 #Windows平台图标
-IF (CMAKE_SYSTEM_NAME MATCHES "Windows")
-SET(WINDOWS_RC_FILE ${PROJECT_SOURCE_DIR}/data/app.rc)
+IF (CMAKE_HOST_SYSTEM_NAME MATCHES "Windows")
+    SET(WINDOWS_RC_FILE ${PROJECT_SOURCE_DIR}/data/app.rc)
 ENDIF ()
 
 SET(APP_NAME ${PROJECT_NAME})
@@ -42,7 +46,11 @@ ADD_EXECUTABLE(${APP_NAME} ${SRC_FILES} ${QRC_FILES} ${WINDOWS_RC_FILE})
 TARGET_INCLUDE_DIRECTORIES(${APP_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/common)
 TARGET_INCLUDE_DIRECTORIES(${APP_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/dialogs)
 TARGET_INCLUDE_DIRECTORIES(${APP_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/forecast_view)
-TARGET_LINK_LIBRARIES(${APP_NAME} Qt5::Core Qt5::Widgets Qt5::Network ${3RD_LIBS})
+IF (CMAKE_HOST_SYSTEM_NAME MATCHES "Linux")
+    TARGET_LINK_LIBRARIES(${APP_NAME} Qt5::Core Qt5::Widgets Qt5::Network Qt5::X11Extras ${X11_LIBRARIES} ${3RD_LIBS})
+ELSE()
+    TARGET_LINK_LIBRARIES(${APP_NAME} Qt5::Core Qt5::Widgets Qt5::Network ${3RD_LIBS})
+ENDIF ()
 
 SET(CMAKE_INSTALL_PREFIX /usr)
 
@@ -62,3 +70,4 @@ SET(CPACK_DEBIAN_PACKAGE_VERSION ${PACKAGE_VERSION})
 SET(CPACK_DEBIAN_PACKAGE_PRIORITY "Optional")
 SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libqt5core5a, libqt5widgets5, libqt5network5, libqt5gui5")
 INCLUDE(CPack)
+
