--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,7 +9,10 @@ SET(CMAKE_AUTORCC ON)
 #SET(Qt5WebEngineWidgets_DIR "${CMAKE_PREFIX_PATH}/cmake/Qt5WebEngineWidgets")
 #FIND_PACKAGE失败则需要设置CMAKE_PREFIX_PATH，或者设置上述路径
 IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
-#    SET(CMAKE_PREFIX_PATH "/usr/lib/x86_64-linux-gnu/cmake")
+    SET(CMAKE_PREFIX_PATH "/usr/lib/x86_64-linux-gnu/cmake")
+    SET(CMAKE_INSTALL_PREFIX /usr)
+ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Windows")
+    SET(Qt5_DIR "D:/Qt/Qt5.12.11/5.12.11/mingw73_64/lib/cmake/Qt5")
 ENDIF()
 
 FIND_PACKAGE(Qt5 COMPONENTS Core REQUIRED)
@@ -29,8 +32,7 @@ SET(3RD_LIBS SingleApplication::SingleApplication)
 CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/common/version.h.in ${CMAKE_CURRENT_SOURCE_DIR}/common/version.h @ONLY)
 FILE(GLOB_RECURSE SRC_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.h)
 #已经使用了SET(CMAKE_AUTORCC ON)，可以不使用QT5_ADD_RESOURCES, qrc文件最终也是被编译为CPP文件。
-#QT5_ADD_RESOURCES(QRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/resource/res.qrc)
-SET(QRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/resource/res.qrc)
+QT5_ADD_RESOURCES(QRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/resource/res.qrc)
 
 #Windows平台图标
 IF(CMAKE_HOST_SYSTEM_NAME MATCHES "Windows")
@@ -41,6 +43,10 @@ SET(APP_NAME ${PROJECT_NAME})
 #将编译产生的可执行文件或库文件存放到指定目录下，不包含编译生成的中间文件
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 
+#This is similar to qt5_add_resources, but directly generates object files (.o, .obj) files instead of C++ source code.
+#This allows to embed bigger resources, where compiling to C++ sources and then to binaries would be too time consuming or memory intensive.
+#QT5_ADD_BIG_RESOURCES(${APP_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/resource/res.qrc)
+
 ADD_EXECUTABLE(${APP_NAME} ${SRC_FILES} ${QRC_FILES} ${WINDOWS_RC_FILE})
 TARGET_INCLUDE_DIRECTORIES(${APP_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/common)
 TARGET_INCLUDE_DIRECTORIES(${APP_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/dialogs)
@@ -50,8 +56,6 @@ IF(CMAKE_HOST_SYSTEM_NAME MATCHES "Linux")
 ELSE()
     TARGET_LINK_LIBRARIES(${APP_NAME} Qt5::Core Qt5::Widgets Qt5::Network ${3RD_LIBS})
 ENDIF()
-
-SET(CMAKE_INSTALL_PREFIX /usr)
 
 INSTALL(TARGETS ${APP_NAME} RUNTIME DESTINATION /opt/apps/xzg/)
 INSTALL(FILES ${PROJECT_SOURCE_DIR}/data/xweather.desktop
