--- a/data/xweather.desktop
+++ b/data/xweather.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Type=Application
-Categories=Qt;Utility;Core
+Categories=Network
 Exec=/opt/apps/xzg/xweather
 GenericName=XWeather
 GenericName[zh_CN]=简单天气
