修改安装后启动器无应用图标问题

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -57,10 +57,11 @@ ELSE()
     TARGET_LINK_LIBRARIES(${APP_NAME} Qt5::Core Qt5::Widgets Qt5::Network ${3RD_LIBS})
 ENDIF()
 
-INSTALL(TARGETS ${APP_NAME} RUNTIME DESTINATION /opt/apps/org.xzg.xweather/files/)
-INSTALL(FILES ${PROJECT_SOURCE_DIR}/data/xweather.desktop DESTINATION /opt/apps/org.xzg.xweather/entries/applications/)
-INSTALL(FILES ${PROJECT_SOURCE_DIR}/data/org.xzg.xweather.svg DESTINATION /opt/apps/org.xzg.xweather/entries/icons/hicolor/scalable/apps/)
-INSTALL(FILES ${PROJECT_SOURCE_DIR}/data/info DESTINATION /opt/apps/org.xzg.xweather/)
+INSTALL(TARGETS ${APP_NAME} RUNTIME                               DESTINATION /opt/apps/org.xzg.xweather/files/)
+INSTALL(FILES ${PROJECT_SOURCE_DIR}/data/org.xzg.xweather.desktop DESTINATION /opt/apps/org.xzg.xweather/entries/applications/)
+INSTALL(FILES ${PROJECT_SOURCE_DIR}/data/org.xzg.xweather.desktop DESTINATION /usr/share/applications)
+INSTALL(FILES ${PROJECT_SOURCE_DIR}/data/org.xzg.xweather.svg     DESTINATION /opt/apps/org.xzg.xweather/entries/icons/hicolor/scalable/apps/)
+INSTALL(FILES ${PROJECT_SOURCE_DIR}/data/info                     DESTINATION /opt/apps/org.xzg.xweather/)
 #构建DEB包
 SET(CPACK_GENERATOR "DEB")
 SET(CPACK_PACKAGE_NAME "org.xzg.xweather")
